tests/requests/invalid/chunked_empty_ext.http
POST /empty_but_extended_chunk_size HTTP/1.1\r\n
Transfer-Encoding: chunked\r\n
\r\n
 ;foo=1\r\n
\r\n
POST /after1 HTTP/1.1\r\n
Transfer-Encoding: identity\r\n
\r\n
POST /after2 HTTP/1.1\r\n
Transfer-Encoding: identity\r\n
\r\n
